# Keepa-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  live-keepa-smoke.yml  pages.yml
.zread/wiki/: current
docs/: agent-contract.md  index.html  keepa-official-api-notes.md
docs/architecture/: mcp-agent-tools.md  mcp-python-sdk-adapter-comparison.md  service-cli-split-plan.md
docs/reports/: 2026-05-09-keepa-cli-implementation-report.md
docs/roadmaps/: 2026-05-09-keepa-cli-development-roadmap.md
docs/schema/: products.agent-view.schema.json  risk-taxonomy.schema.json  workflow-runtime-contract.schema.json
evidence/: README.md  manifest.csv
evidence/runtime-logs/: 20260510-B0D8W1YVBX-agent-temporal-v5.json  20260510-B0D8W1YVBX-agent-view-v5.json  20260510-B0D8W1YVBX-full.json  20260510-B0F7XPYCSJ-full.json
evidence/tasks/: 20260509-1850-keepa-cli调研报告.md  20260509-2326-项目健康检查与完善项记录.md  20260509-2346-硬化完善实施记录.md  20260510-0018-textual现代tui工作台.md  20260510-0048-token配置与英文默认界面.md  20260510-1111-tui交互收敛优化.md  20260510-1128-tui轻量语义色.md  20260510-1142-真实keepa低成本smoke.md  20260510-1634-cache审计与命令族拆分.md  20260510-1657-family拆分与cache-key门禁.md  20260510-agent-evaluation-fixtures.md  (+50 more)
hooks/: README.md  run_relevant_hooks.py
keepa_cli/: __init__.py  __main__.py  agent_contract.py  agent_eval.py  agent_profile.py  analysis.py  cache.py  capabilities.py  cassettes.py  cli.py  client.py  config.py  doctor.py  domains.py  envelope.py  figures.py  fixture_sync.py  high_value.py  history_export.py  keepa_time.py  metrics.py  product_view.py  redaction.py  request_spec.py  research_brief.py  research_context.py  research_graph.py  risk_schema.py  schema_docs.py  schema_snapshot.py  service.py  token_budget.py  transport.py  workflows.py
scripts/: __init__.py  check_agent_eval_fixtures.py  check_fixture_sync.py  check_live_cache_options.py  check_mcp_output_schema.py  check_mcp_performance_gate.py  check_mcp_quality_gate.py  check_mcp_sdk_adapter_typed_fixture.py  compare_mcp_sdk_adapter_fixture.py  export_mcp_inspector_snapshot.py  generate_agent_schema.py  install_verify.py  manual_live_product_read.py  mcp_agent_workflow_example.py  mcp_example_support.py  mcp_report_research_example.py  mcp_tracking_audit_example.py  redact_cassette.py  release_gate.js  release_gate.py  smoke_mcp_sdk_adapter_client.py  summarize_mcp_performance_history.py
tests/: test_agent_eval_fixtures.py  test_agent_session.py  test_backend_branch_coverage.py  test_backend_branch_strict_coverage.py  test_backend_edge_coverage.py  test_backend_final_coverage.py  test_backend_remaining_coverage.py  test_backend_transform_coverage.py  test_business_metrics.py  test_cache.py  test_capabilities.py  test_cli.py  test_client.py  test_config.py  test_doctor.py  test_domains.py  test_envelope.py  test_history_export.py  test_manual_live_product_read.py  test_mcp.py  test_mcp_client_example.py  test_mcp_http_adapter.py  test_mcp_http_contract.py  test_mcp_performance_history.py  test_mcp_sdk_adapter.py  test_modern_tui.py  test_npm_wrapper.py  test_official_api_coverage.py  test_phase10_workflows.py  test_phase8_high_value_commands.py  test_project_tools.py  test_release_ecosystem.py  test_request_spec.py  test_schema_docs.py  test_schema_snapshot.py  test_service_commands.py  test_stdio.py  test_token_budget.py  test_transport.py  test_tui.py
(+144 files in other folders)
