[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keepa-cli"
version = "0.1.0"
description = "Agent-first Keepa API CLI for product research, safe automation, and MCP-native workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "prompt_toolkit>=3.0,<4",
]
license = {file = "LICENSE"}
authors = [{name = "cuNuo"}]
keywords = [
    "keepa",
    "keepa-api",
    "amazon",
    "amazon-product-research",
    "cli",
    "agent",
    "mcp",
    "stdio",
    "fixture",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://cunuo.github.io/Keepa-cli/"
Repository = "https://github.com/cuNuo/Keepa-cli"
Issues = "https://github.com/cuNuo/Keepa-cli/issues"
Documentation = "https://cunuo.github.io/Keepa-cli/"
Architecture = "https://zread.ai/cuNuo/Keepa-cli"
Changelog = "https://github.com/cuNuo/Keepa-cli/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = []
tui = [
    "prompt_toolkit>=3.0,<4",
]

[project.scripts]
keepa-cli = "keepa_cli.cli:main"
kc = "keepa_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["keepa_cli*"]

[tool.setuptools.package-data]
keepa_cli = ["fixtures/*.json"]

[tool.coverage.run]
source = ["keepa_cli"]
branch = true
omit = [
    "keepa_cli/ui/*",
    "keepa_cli/cli.py",
    "keepa_cli/cli_builders/*",
    "keepa_cli/__main__.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
